--- a/TamaraMargaryan/First_project/test/test/libs/css/styles.css
+++ b/TamaraMargaryan/First_project/test/test/libs/css/styles.css
@@ -1,11 +1,22 @@
-h1 {
-    color: red;
+.container {
+    width: 100%;
+    height: 100vh;
+    display: inline-block;
+    margin: 0;
 }
-
-body {
-    background-color: green;
+.container-content {
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    float: left;
+    vertical-align: top;
+    padding: 5px;
 }
-
-p {
-    color: orange;
+.container-content--left{
+    width: calc(100%/2);
+    background-color: white;
+}
+.container-content--right{
+    width: calc(100%/2);
+    background-color: rgb(87,195,241);
 }
