--- a/NellyHovhannisyan/Exam/libs/css/style.css
+++ b/NellyHovhannisyan/Exam/libs/css/style.css
@@ -15,6 +15,9 @@ h1, h2{
     float: left;
     text-align: center;
 }
+.col>.icon-article>i {
+    color:red;
+}
 
 footer{
     background-color: red;
@@ -37,8 +40,5 @@ input{
 
     width: 200px;
     height: 30px;
-
-
-
 }
 
