--- a/Artur/task_2/libs/css/main.css
+++ b/Artur/task_2/libs/css/main.css
@@ -6,6 +6,7 @@ body{
     background-color: #1e81ff;
 }
 label{
+    
     display: none;
 }
 .main-container{
@@ -13,12 +14,17 @@ label{
    
    }
 .main-content{
-  
+ 
     border: 1px solid black;
-    background: linear-gradient(90deg, #5976ec 0%,
+    background: linear-gradient(90deg,
+   #5976ec 0%,
    #4a90e6 35%,
    #3ba8e3 100%);
-    overflow: hidden;
+     overflow: hidden; 
+}
+.header{
+     
+ 
 }
 .content-center{
    
@@ -37,17 +43,16 @@ ul,li,a{
     display: inline-block;
     font-size: 16px;
     color: white;
-
-    /* color: white; */
 }
-.header-menu h4 ,.header-menu li{
+.header-menu h4,.header-menu li{
+
    padding: 12px;
 }
 .header-logo h4{
   
   color: white;
   font-size: 14px;
-  /* text-transform: uppercase; */
+
 }
 .header-logo{
     
@@ -59,8 +64,8 @@ ul,li,a{
 }
 .header-nav{
 
-    display: inline-block;
-    float: right;
+    display: block;
+     float: right; 
 }
 .frist-view-block{
     
@@ -68,16 +73,19 @@ ul,li,a{
     margin-bottom: 560px;
 }
 .form{
+
     float: right;
     background-color: white;
     padding: 44px 96px 48px 97px;
 }
 .text-block{
-    display: inline-block;
+
+    display: block;
     width: 31%;
     float: left;
 }
 .form-row,select,.button{
+
     margin-top: 10px;
 }
 .form h4{
@@ -85,10 +93,12 @@ ul,li,a{
     padding-bottom: 10px;
 }
 .form input{
+
     width: 183px;
     height: 27px;
 }
 .form-row select,button{
+
     width: 100%;
     height: 27px;
 }
@@ -109,8 +119,10 @@ select{
 
    color: white;
    padding-bottom: 15px;
+
 }
 .text-block p{
+
     color: white;
     line-height: 23px;
 }
@@ -124,4 +136,5 @@ select{
     color: white;
     border: none;
     margin-top: 10px;
+
 }
