--- a/TamaraMargaryan/Project_list/CSS-homework1/libs/css/styles.css
+++ b/TamaraMargaryan/Project_list/CSS-homework1/libs/css/styles.css
@@ -146,7 +146,9 @@ nav ul li>a{
     font-size: 14px;
     padding: 5px;
 }
-.search-item input#search-input:focus, .search-item input#search-input:active{
+.search-item input#search-input:         focus,
+.search-item input#search-input:active
+{
     outline:none;
     width: 150px;
 }
