--- a/TamaraMargaryan/Project_list/Form_New_Task/libs/css/styles.css
+++ b/TamaraMargaryan/Project_list/Form_New_Task/libs/css/styles.css
@@ -3,16 +3,16 @@ body {
     background-repeat: no-repeat;
     background-size: cover; 
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
-    padding: 30px;
+    padding: 0;
 }
 .container{
-    width: 50%;
+    width: 70%;
     height: 600px;
-    margin: auto;
+    margin: 55px auto 0;
     display: block;
-    padding: 20px 70px;
+    padding: 20px 10px;
     background-image: linear-gradient(#8080809e,#0099cc45,#33ccff45, #8080809e);
 }
 .page-title{
@@ -20,6 +20,8 @@ body {
     font-style: italic;
     text-align: center;
     margin: 0 0 30px;
+    width: 70%;
+    margin: auto;
     border-bottom: 2px solid darkslateblue;
     border-bottom-left-radius: 60px;
     border-top-right-radius: 60px;
