--- a/TamaraMargaryan/Project_list/CSS-homework2/Multipurpose-webtemplate/libs/css/styles.css
+++ b/TamaraMargaryan/Project_list/CSS-homework2/Multipurpose-webtemplate/libs/css/styles.css
@@ -40,7 +40,7 @@ nav {
     margin: 20px;
     border: none;
     outline: none;
-    background: url(../img/Graff%20pink.png) no-repeat;
+    background: url(../img/Graff-pink.png) no-repeat;
     cursor: pointer;
 }
 .header-button-form{
