--- a/LilitBotoyan/homework21_05/libs/css/style.css
+++ b/LilitBotoyan/homework21_05/libs/css/style.css
@@ -1,13 +1,23 @@
+@import "responsive.css";
+
+
 body{
     margin: 0 auto;
     padding: 0 auto;
+    box-sizing: border-box;
 }
 .container{
     background-image: linear-gradient(to bottom, #ededed 65%, #ffaf14 35%);
     width: 100%;
-    height: 100vh;
-    margin: 0 auto;
+    margin: 0 auto ;
     display: inline-block;
+    height: auto !important;
+    padding-bottom:20px;
+}
+.content{
+    width: 80%;
+    margin-left: 10%;
+
 }
 h1{
     text-align: center;
@@ -15,11 +25,7 @@ h1{
     padding:10px ;
     font-weight: bold;
 }
-.content{
-    width: 80%;
-    margin-left: 10%;
-    height: 550px;
-}
+
 .col-sx-8{
     width: 66%;
     background-color: #3ddab8;
@@ -33,6 +39,7 @@ h1{
 div[class*="col"]{
     float: left;
     height: 100%;
+    min-height: 550px;
 }
 input,textarea{
     background-color: transparent;
@@ -73,6 +80,7 @@ button{
     box-sizing: border-box;
     border: none;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 .white{
     background-color: white;
