--- a/LilitBotoyan/lilit4/libs/css/style.css
+++ b/LilitBotoyan/lilit4/libs/css/style.css
@@ -41,7 +41,7 @@ h1,p,h2 {
      text-align: center;
 }
 .items{
-     padding-top: 70px;
+     padding-top: 150px;
      margin: 0 auto;
      display: flex;
      justify-content: space-between;
@@ -60,4 +60,30 @@ h1,p,h2 {
      color:grey;
 }
 .container-fluid{
-     padding-top: 50px;}
+     padding-top: 50px;
+}
+.octangle{
+     width: 50px;
+     height: 25px;
+     background-color: #c5d8ee;
+     margin: 20px auto;
+}
+.octangle:before{
+     top: -20px;
+     border-width: 0 25px 20px 25px;
+     margin-top: -50px;
+     border-color: transparent transparent #c5d8ee transparent;
+}
+.octangle:after{
+     border-width: 20px 25px 0 25px;
+     margin-top: 5px;
+     border-color: #c5d8ee transparent transparent transparent;
+}
+.octangle:before,.octangle:after{
+     content:"";
+     width: 0;
+     height: 0;
+     border-style: solid;
+     display: block;
+     position: relative;
+}
